1. fix: not listen unsed onetime keys 2. fix: throttle to add contact 3. config: for build ios

--- a/packages/app/pubspec.yaml
+++ b/packages/app/pubspec.yaml
@@ -3,7 +3,7 @@ description: keychat
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: "none" # Remove this line if you wish to publish to pub.dev
-version: 1.15.1+4175
+version: 1.15.2+4176
 
 environment:
   sdk: ">=3.4.3 <4.0.0"
@@ -94,6 +94,7 @@ dev_dependencies:
   lints: ^4.0.0
   flutter_launcher_icons: ^0.13.1
   analyzer: ^5.13.0
+  test: ^1.25.2
 
 flutter:
   # The following line ensures that the Material Icons font is
