--- a/packages/app/pubspec.yaml
+++ b/packages/app/pubspec.yaml
@@ -3,7 +3,7 @@ description: keychat
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: "none" # Remove this line if you wish to publish to pub.dev
-version: 1.15.2+4176
+version: 1.15.4+4179
 
 environment:
   sdk: ">=3.4.3 <4.0.0"
@@ -31,32 +31,31 @@ dependencies:
   json_annotation: ^4.9.0
   isar: 3.1.0+1
   isar_flutter_libs: 3.1.0+1
-  share_plus: ^7.2.1
+  share_plus: ^9.0.0
   flutter_linkify: ^6.0.0
   permission_handler: ^11.3.1
-  mobile_scanner: ^4.0.1
+  mobile_scanner: ^5.1.1
   qr_flutter: "^4.1.0"
   url_launcher: ^6.2.3
   settings_ui: ^2.0.2
-  onesignal_flutter: ^5.2.0
+  onesignal_flutter: ^5.2.2
   search_page: ^2.3.0
-  flutter_app_badger: ^1.5.0
   app_settings: ^5.1.1
-  flutter_native_splash: ^2.3.1
+  flutter_native_splash: ^2.4.1
   package_info_plus: ^8.0.0
   flutter_spinkit: ^5.2.0 # loading
   modal_bottom_sheet: ^3.0.0-pre
-  dio: ^5.4.0
+  dio: ^5.5.0+1
   photo_view: ^0.15.0
   image_picker: ^1.0.7 # select image
-  any_link_preview: ^3.0.1 # show link preview in chat content
+  any_link_preview: ^3.0.2 # show link preview in chat content
   flutter_dotenv: ^5.1.0
-  logger: ^2.3.0
+  logger: ^2.4.0
   aws: 1.0.0
   keychat_rust_ffi_plugin: 1.0.0
   keychat_ecash: 1.0.0
   cached_network_image: ^3.3.1
-  onboarding: ^3.1.0
+  onboarding: ^4.0.2
   gif: ^2.3.0 # gif support
   queue: ^3.1.0+2
   mutex: ^3.0.1
@@ -70,7 +69,7 @@ dependencies:
   flutter_floating: ^1.0.8
   websocket_universal: ^1.2.5
   image_compression_flutter: ^1.0.4
-  video_player: ^2.8.2
+  video_player: ^2.9.1
   video_compress: ^3.1.2
   flutter_markdown: ^0.6.18+3
   scroll_to_index: ^3.0.1
@@ -82,15 +81,17 @@ dependencies:
   linkify: ^5.0.0
   flutter_svg: ^2.0.10+1
   crypto: ^3.0.3
+  sentry_flutter: ^8.4.0
+  app_badge_plus: ^1.1.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  build_runner: ^2.4.8
+  build_runner: ^2.4.11
   flutter_lints: ^4.0.0
   isar_generator: 3.1.0+1
   json_serializable: ^6.8.0
-  freezed: ^2.4.1
+  freezed: ^2.5.2
   lints: ^4.0.0
   flutter_launcher_icons: ^0.13.1
   analyzer: ^5.13.0
