--- a/packages/app/macos/Runner/Release.entitlements
+++ b/packages/app/macos/Runner/Release.entitlements
@@ -16,5 +16,7 @@
     <true/>
     <key>com.apple.security.network.server</key>
     <true/>
+    <key>keychain-access-groups</key>
+    <array/>
   </dict>
 </plist>
