--- a/packages/app/pubspec.yaml
+++ b/packages/app/pubspec.yaml
@@ -4,7 +4,7 @@ description: keychat
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
-version: 1.16.2+4216
+version: 1.16.3+4218
 
 environment:
   sdk: ">=3.4.3 <4.0.0"
@@ -84,6 +84,7 @@ dependencies:
   sentry_flutter: ^8.4.0
   app_badge_plus: ^1.1.1
   web_socket_channel: ^2.4.5
+  flutter_secure_storage: ^9.2.2
 
 dev_dependencies:
   flutter_test:
