1. save svg avatar to local file 2. fix: delete room error 3. update message_widget background color 4. upgrade: flutter version to 3.24.0

--- a/melos.yaml
+++ b/melos.yaml
@@ -5,6 +5,10 @@ packages:
   - shared/**
   - packages/**
 
+ignore:
+  - packages/app/build/**
+  - packages/keychat_rust_ffi_plugin/cargokit/**
+
 scripts:
   postclean:
     run: melos run clean:flutter --no-select
