--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,5 @@ packages/app/ios/Framework
 
 # FVM Version Cache
 .fvm/
+packages/app/android/app/google-services.json
+packages/app/firebase.json
