--- a/packages/app/android/build.gradle
+++ b/packages/app/android/build.gradle
@@ -7,10 +7,16 @@ buildscript {
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:7.2.0'
+        classpath 'com.android.tools.build:gradle:8.1.0'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
 }
+
+// configurations.all {
+//     resolutionStrategy {
+//         force 'androidx.core:core-ktx:1.6.0'
+//     }
+// }
 
 allprojects {
     repositories {
@@ -26,13 +32,12 @@ rootProject.buildDir = '../build/'
 subprojects {
     project.buildDir = "${rootProject.buildDir}/${project.name}"
 }
-// subprojects {
-//     project.evaluationDependsOn(':app')
-// }
+
 subprojects {
     afterEvaluate { project ->
         if (project.hasProperty('android')) {
             project.android {
+                compileSdkVersion 34
                 if (namespace == null) {
                     namespace project.group
                 }
@@ -40,6 +45,11 @@ subprojects {
         }
     }
 }
+
+subprojects {
+    project.evaluationDependsOn(':app')
+}
+
 tasks.register("clean", Delete) {
     delete rootProject.buildDir
 }
