--- a/packages/app/pubspec.yaml
+++ b/packages/app/pubspec.yaml
@@ -4,7 +4,7 @@ description: keychat
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
-version: 1.19.6+4248
+version: 1.19.6+4250
 
 environment:
   sdk: ">=3.4.3 <4.0.0"
@@ -85,6 +85,7 @@ dependencies:
   firebase_core: ^3.4.0
   firebase_messaging: ^15.1.0
   barcode_scan2: ^4.3.3
+  flutter_app_badger: ^1.5.0
 
 dev_dependencies:
   flutter_test:
