Support Google FCM (#44)
* support fcm to receive notification

* update lib

* for fcm

* update qr scan lib

* support lightning qrcode

* 1.19.6+4248

* fix

* fix

* fix

* bugfix

* fix

* fit android

* config

---------

Co-authored-by: jack-keychat <jack.keychat@gmail.com>

--- a/packages/app/pubspec.yaml
+++ b/packages/app/pubspec.yaml
@@ -4,7 +4,7 @@ description: keychat
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
-version: 1.19.5+4247
+version: 1.19.6+4250
 
 environment:
   sdk: ">=3.4.3 <4.0.0"
@@ -35,11 +35,9 @@ dependencies:
   share_plus: ^9.0.0
   flutter_linkify: ^6.0.0
   permission_handler: ^11.3.1
-  mobile_scanner: ^5.1.1
   qr_flutter: "^4.1.0"
   url_launcher: ^6.2.3
   settings_ui: ^2.0.2
-  onesignal_flutter: ^5.2.2
   search_page: ^2.3.0
   app_settings: ^5.1.1
   flutter_native_splash: ^2.4.1
@@ -84,6 +82,10 @@ dependencies:
   web_socket_channel: ^3.0.1
   flutter_secure_storage: ^9.2.2
   avatar_plus: ^0.0.4
+  firebase_core: ^3.4.0
+  firebase_messaging: ^15.1.0
+  barcode_scan2: ^4.3.3
+  flutter_app_badger: ^1.5.0
 
 dev_dependencies:
   flutter_test:
