--- a/packages/app/android/app/build.gradle
+++ b/packages/app/android/app/build.gradle
@@ -68,7 +68,7 @@ android {
         multiDexEnabled true
         ndk {
             // abiFilters 'x86','armeabi-v7a','arm64-v8a','x86_64'
-            abiFilters 'x86','armeabi-v7a','arm64-v8a'
+            abiFilters 'x86','arm64-v8a'
             // abiFilters 'ARCH_X86','ARCH_ARM32','ARCH_ARM64'
         }        
     }
@@ -76,7 +76,7 @@ android {
         abi {
             enable true //enables the ABIs split mechanism
             reset()
-            include 'x86','armeabi-v7a','arm64-v8a'
+            include 'x86','arm64-v8a'
             // include 'arm64-v8a', 'armeabi-v7a', 'x86', 'x86_64'
             universalApk  true
         }
@@ -105,39 +105,7 @@ dependencies {
     implementation 'com.android.support:multidex:1.0.3'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'com.google.android.material:material:1.9.0'
-    implementation "me.leolin:ShortcutBadger:1.1.22@aar"
 }
-
-// [
-//     ['Debug': ''],
-//     ['Profile': '--release'],
-//     ['Release': '--release']
-// ].each {
-//     def taskPostfix = it.first
-//     def profileMode = it.second
-//     tasks.whenTaskAdded { task ->
-//         if (task.name == "javaPreCompile$taskPostfix") {
-//             task.dependsOn "cargoBuild$taskPostfix"
-//         }
-//     }
-//     tasks.register("cargoBuild$taskPostfix", Exec) {
-//         // Until https://github.com/bbqsrc/cargo-ndk/pull/13 is merged,
-//         // this workaround is necessary.
-        
-//          def ndk_command = """cargo ndk \
-//             -t armeabi-v7a -t arm64-v8a -t x86 \
-//             -o ../app/android/app/src/main/jniLibs build $profileMode"""
-
-//         workingDir "../../../keychat_rust"
-//         environment "ANDROID_NDK_HOME", "$ANDROID_NDK"
-//         if (org.gradle.nativeplatform.platform.internal.DefaultNativePlatform.currentOperatingSystem.isWindows()) {
-//             commandLine 'cmd', '/C', ndk_command
-//         } else {
-//             commandLine 'sh', '-c', ndk_command
-//         }
-//     }
-// }
-
 
 apply from: "../../../keychat_rust_ffi_plugin/cargokit/gradle/plugin.gradle"
 
