--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -9,6 +9,8 @@
 # packages, and plugins designed to encourage good coding practices.
 include: package:flutter_lints/flutter.yaml
 analyzer:
+  errors:
+    invalid_annotation_target: ignore
   exclude: [build/**, android/, packages/keychat_rust_ffi_plugin/lib/lib.dart]
 
 linter:
