--- a/packages/app/pubspec.yaml
+++ b/packages/app/pubspec.yaml
@@ -85,6 +85,7 @@ dependencies:
   firebase_core: ^3.4.0
   firebase_messaging: ^15.1.0
   barcode_scan2: ^4.3.3
+  freezed_annotation: ^2.4.4
 
 dev_dependencies:
   flutter_test:
