--- a/packages/app/pubspec.yaml
+++ b/packages/app/pubspec.yaml
@@ -4,7 +4,7 @@ description: keychat
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
-version: 1.19.11+4256
+version: 1.20.2+4260
 
 environment:
   sdk: ">=3.4.3 <4.0.0"
@@ -68,7 +68,7 @@ dependencies:
   image_compression_flutter: ^1.0.4
   video_player: ^2.9.1
   video_compress: ^3.1.3
-  flutter_markdown: ^0.6.18+3
+  flutter_markdown: ^0.7.3+2
   scroll_to_index: ^3.0.1
   connectivity_plus: ^6.0.3
   file_selector: ^1.0.3
@@ -85,6 +85,7 @@ dependencies:
   firebase_core: ^3.4.0
   firebase_messaging: ^15.1.0
   barcode_scan2: ^4.3.3
+  freezed_annotation: ^2.4.4
 
 dev_dependencies:
   flutter_test:
