--- a/packages/app/pubspec.yaml
+++ b/packages/app/pubspec.yaml
@@ -91,6 +91,8 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  integration_test:
+    sdk: flutter    
   build_runner: ^2.4.11
   flutter_lints: ^4.0.0
   isar_generator: 3.1.0+1
