--- a/packages/app/pubspec.yaml
+++ b/packages/app/pubspec.yaml
@@ -22,38 +22,37 @@ dependencies:
   cupertino_icons: ^1.0.2
   get: ^4.6.5
   flutter_easyloading: ^3.0.5
-  path_provider: ^2.0.0
-  path: ^1.8.2
-  convert: ^3.1.1
-  shared_preferences: ^2.0.18
+  path_provider: ^2.1.5
+  path: 1.9.0
+  convert: ^3.1.2
+  shared_preferences: ^2.3.3
   badges: ^3.0.3
-  intl: ^0.19.0
-  equatable: ^2.0.5
+  equatable: ^2.0.6
   json_annotation: ^4.9.0
   isar: 3.1.0+1
   isar_flutter_libs: 3.1.0+1
-  share_plus: ^9.0.0
+  share_plus: ^10.1.2
   flutter_linkify: ^6.0.0
   permission_handler: ^11.3.1
-  qr_flutter: "^4.1.0"
-  url_launcher: ^6.2.3
+  qr_flutter: ^4.1.0
+  url_launcher: ^6.3.1
   settings_ui: ^2.0.2
   search_page: ^2.3.0
   app_settings: ^5.1.1
-  flutter_native_splash: ^2.4.1
-  package_info_plus: ^8.0.0
+  flutter_native_splash: ^2.4.3
+  package_info_plus: ^8.1.1
   flutter_spinkit: ^5.2.0 # loading
   modal_bottom_sheet: ^3.0.0-pre
-  dio: ^5.5.0+1
+  dio: ^5.7.0
   photo_view: ^0.15.0
   image_picker: ^1.0.7 # select image
   any_link_preview: ^3.0.2 # show link preview in chat content
-  flutter_dotenv: ^5.1.0
-  logger: ^2.4.0
+  flutter_dotenv: ^5.2.1
+  logger: ^2.5.0
   aws: 1.0.0
   keychat_rust_ffi_plugin: 1.0.0
   keychat_ecash: 1.0.0
-  cached_network_image: ^3.3.1
+  cached_network_image: ^3.4.1
   onboarding: ^4.0.2
   # gif: ^2.3.0 # gif support
   queue: ^3.1.0+2
@@ -66,39 +65,40 @@ dependencies:
   flutter_staggered_grid_view: ^0.7.0
   flutter_floating: ^1.0.8
   image_compression_flutter: ^1.0.4
-  video_player: ^2.9.1
+  video_player: ^2.9.2
   video_compress: ^3.1.3
-  flutter_markdown: ^0.7.3+2
+  flutter_markdown: ^0.7.4+2
   scroll_to_index: ^3.0.1
-  connectivity_plus: ^6.0.3
+  connectivity_plus: ^6.1.0
   file_selector: ^1.0.3
   open_filex: ^4.4.0
   timer_builder: ^2.0.0
   linkify: ^5.0.0
-  flutter_svg: ^2.0.10+1
-  crypto: ^3.0.3
+  flutter_svg: ^2.0.15
+  crypto: ^3.0.6
   web_socket_channel: ^3.0.1
-  app_badge_plus: ^1.1.5
+  app_badge_plus: ^1.1.6
   flutter_secure_storage: ^9.2.2
-  avatar_plus: ^0.0.4
-  firebase_core: ^3.4.0
-  firebase_messaging: ^15.1.0
-  barcode_scan2: ^4.3.3
+  avatar_plus: ^0.0.5
   freezed_annotation: ^2.4.4
-  firebase_crashlytics: ^4.1.0
-  firebase_analytics: ^11.3.0
+  barcode_scan2: ^4.3.3
+  intl: ^0.19.0
+  firebase_core: ^3.8.0
+  firebase_messaging: ^15.1.5
+  firebase_crashlytics: ^4.1.5
+  firebase_analytics: ^11.3.5
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   integration_test:
     sdk: flutter    
-  build_runner: ^2.4.11
-  flutter_lints: ^4.0.0
+  build_runner: ^2.4.13
+  flutter_lints: ^5.0.0
   isar_generator: 3.1.0+1
   json_serializable: ^6.8.0
   freezed: ^2.5.2
-  lints: ^4.0.0
+  lints: ^5.0.0
   flutter_launcher_icons: ^0.13.1
   analyzer: ^5.13.0
   test: ^1.25.2
