--- a/packages/app/android/local.properties.example
+++ b/packages/app/android/local.properties.example
@@ -4,5 +4,7 @@ flutter.buildMode=release
 flutter.versionName=1.19.10
 flutter.versionCode=4255
 flutter.compileSdkVersion=34
+flutter.targetSdkVersion=34
 flutter.minSdkVersion=27
+flutter.ndkVersion=28.0.12674087
 app=Keychat
