--- a/packages/app/pubspec.yaml
+++ b/packages/app/pubspec.yaml
@@ -4,7 +4,7 @@ description: keychat
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
-version: 1.21.6+4272
+version: 1.21.6+4273
 
 environment:
   sdk: ">=3.4.3 <4.0.0"
@@ -87,6 +87,7 @@ dependencies:
   firebase_messaging: ^15.1.5
   firebase_crashlytics: ^4.1.5
   firebase_analytics: ^11.3.5
+  flutter_adaptive_scaffold: ^0.3.1
 
 dev_dependencies:
   flutter_test:
