--- a/packages/app/pubspec.yaml
+++ b/packages/app/pubspec.yaml
@@ -87,7 +87,7 @@ dependencies:
   firebase_messaging: ^15.1.5
   firebase_crashlytics: ^4.1.5
   firebase_analytics: ^11.3.5
-  flutter_adaptive_scaffold: ^0.3.1
+  # flutter_adaptive_scaffold: ^0.3.1
 
 dev_dependencies:
   flutter_test:
