--- a/packages/app/android/app/build.gradle
+++ b/packages/app/android/app/build.gradle
@@ -68,7 +68,13 @@ android {
             // abiFilters 'x86','armeabi-v7a','arm64-v8a','x86_64'
             abiFilters 'arm64-v8a'
             // abiFilters 'ARCH_X86','ARCH_ARM32','ARCH_ARM64'
-        }        
+        }
+
+        project.android.applicationVariants.all { variant ->
+            variant.outputs.each { output ->
+                  output.versionCodeOverride = flutterVersionCode.toInteger()
+              }
+        }
     }
     splits {
         abi {
