--- a/packages/app/pubspec.yaml
+++ b/packages/app/pubspec.yaml
@@ -89,6 +89,7 @@ dependencies:
   webview_flutter: ^4.10.0
   webview_flutter_wkwebview: ^3.16.3
   async_queue: ^2.0.2
+  url_launcher: ^6.3.1
 
 dev_dependencies:
   flutter_test:
