--- a/packages/app/pubspec.yaml
+++ b/packages/app/pubspec.yaml
@@ -4,7 +4,7 @@ description: keychat
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
-version: 1.23.2+6283
+version: 1.24.1+6295
 
 environment:
   sdk: ">=3.4.3 <4.0.0"
@@ -35,7 +35,6 @@ dependencies:
   flutter_linkify: ^6.0.0
   permission_handler: ^11.3.1
   qr_flutter: ^4.1.0
-  url_launcher: ^6.3.1
   settings_ui: ^2.0.2
   search_page: ^2.3.0
   app_settings: ^5.1.1
@@ -87,6 +86,10 @@ dependencies:
   firebase_messaging: ^15.1.5
   firebase_crashlytics: ^4.1.5
   firebase_analytics: ^11.3.5
+  webview_flutter: ^4.10.0
+  webview_flutter_wkwebview: ^3.16.3
+  async_queue: ^2.0.2
+  url_launcher: ^6.3.1
 
 dev_dependencies:
   flutter_test:
