--- a/packages/app/android/app/build.gradle
+++ b/packages/app/android/app/build.gradle
@@ -80,7 +80,7 @@ android {
         abi {
             enable true //enables the ABIs split mechanism
             reset()
-            include 'arm64-v8a'
+            include 'arm64-v8a', 'x86_64'
             // include 'arm64-v8a', 'armeabi-v7a', 'x86', 'x86_64'
             universalApk  true
         }
