--- a/packages/app/pubspec.yaml
+++ b/packages/app/pubspec.yaml
@@ -4,7 +4,7 @@ description: keychat
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
-version: 1.24.3+6297
+version: 1.24.4+6298
 
 environment:
   sdk: ">=3.4.3 <4.0.0"
@@ -113,6 +113,7 @@ flutter:
 
   assets:
     - assets/images/
+    - assets/images/logo/
     - .env
 
 # dart run flutter_native_splash:create
