--- a/packages/app/pubspec.yaml
+++ b/packages/app/pubspec.yaml
@@ -4,7 +4,7 @@ description: keychat
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
-version: 1.24.1+6295
+version: 1.24.1+6298
 
 environment:
   sdk: ">=3.4.3 <4.0.0"
@@ -90,6 +90,9 @@ dependencies:
   webview_flutter_wkwebview: ^3.16.3
   async_queue: ^2.0.2
   url_launcher: ^6.3.1
+  encrypt: ^5.0.3
+  pick_or_save: ^2.2.4
+  file_picker: ^8.1.6
 
 dev_dependencies:
   flutter_test:
