--- a/packages/app/pubspec.yaml
+++ b/packages/app/pubspec.yaml
@@ -62,7 +62,6 @@ dependencies:
   carousel_slider: ^5.0.0
   flutter_staggered_grid_view: ^0.7.0
   flutter_floating: ^1.0.8
-  image_compression_flutter: ^1.0.4
   video_player: ^2.9.2
   video_compress: ^3.1.3
   flutter_markdown: ^0.7.4+2
@@ -93,6 +92,7 @@ dependencies:
   encrypt: ^5.0.3
   pick_or_save: ^2.2.4
   file_picker: ^8.1.6
+  image: ^4.5.2
 
 dev_dependencies:
   flutter_test:
