--- a/melos.yaml
+++ b/melos.yaml
@@ -131,6 +131,10 @@ scripts:
     name: build_ios
     description: "build ios"
     run: bash scripts/build_ios.sh
+  build:macos:
+    name: build_ios
+    description: "build ios"
+    run: bash scripts/build_macos.sh    
 
   build:android:
     name: build_ios
