--- a/packages/app/pubspec.yaml
+++ b/packages/app/pubspec.yaml
@@ -4,7 +4,7 @@ description: keychat
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
-version: 1.25.4+6310
+version: 1.25.4+6311
  
 environment:
   sdk: ">=3.4.3 <4.0.0"
@@ -72,7 +72,6 @@ dependencies:
   flutter_svg: ^2.0.15
   crypto: ^3.0.6
   web_socket_channel: ^3.0.1
-  app_badge_plus: ^1.1.6
   flutter_secure_storage: ^9.2.2
   avatar_plus: ^0.0.5
   freezed_annotation: ^2.4.4
@@ -89,6 +88,7 @@ dependencies:
   file_picker: ^8.1.6
   image: ^4.5.2
   pub_semver: ^2.1.5
+  flutter_new_badger: ^1.1.0
 
 dev_dependencies:
   flutter_test:
@@ -104,6 +104,7 @@ dev_dependencies:
   flutter_launcher_icons: ^0.13.1
   analyzer: ^5.13.0
   test: ^1.25.2
+  dmg: ^0.1.2
 
 flutter:
   # The following line ensures that the Material Icons font is
@@ -123,8 +124,11 @@ flutter_native_splash:
   image: assets/images/logo.png
   color_dark: "#121212"
   image_dark: assets/images/logo.png
-
+# dart run flutter_launcher_icons
 flutter_launcher_icons:
   android: "launcher_icon"
-  # ios: true
+  ios: true
+  macos: 
+    generate: true
+    image_path: "assets/images/logo-bg.png"
   image_path: "assets/images/logo.png"
