--- a/packages/app/macos/Runner.xcodeproj/xcshareddata/xcschemes/Runner.xcscheme
+++ b/packages/app/macos/Runner.xcodeproj/xcshareddata/xcschemes/Runner.xcscheme
@@ -2,44 +2,44 @@
 <Scheme
    LastUpgradeVersion = "1510"
    version = "1.3">
-  <BuildAction
+   <BuildAction
       parallelizeBuildables = "YES"
       buildImplicitDependencies = "YES">
-    <BuildActionEntries>
-      <BuildActionEntry
+      <BuildActionEntries>
+         <BuildActionEntry
             buildForTesting = "YES"
             buildForRunning = "YES"
             buildForProfiling = "YES"
             buildForArchiving = "YES"
             buildForAnalyzing = "YES">
-        <BuildableReference
+            <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "33CC10EC2044A3C60003C045"
-               BuildableName = "keychat.app"
+               BuildableName = "keychat-desktop.app"
                BlueprintName = "Runner"
                ReferencedContainer = "container:Runner.xcodeproj">
-        </BuildableReference>
-      </BuildActionEntry>
-    </BuildActionEntries>
-  </BuildAction>
-  <TestAction
+            </BuildableReference>
+         </BuildActionEntry>
+      </BuildActionEntries>
+   </BuildAction>
+   <TestAction
       buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES">
-    <MacroExpansion>
-      <BuildableReference
+      <MacroExpansion>
+         <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "33CC10EC2044A3C60003C045"
-            BuildableName = "keychat.app"
+            BuildableName = "keychat-desktop.app"
             BlueprintName = "Runner"
             ReferencedContainer = "container:Runner.xcodeproj">
-      </BuildableReference>
-    </MacroExpansion>
-    <Testables>
-    </Testables>
-  </TestAction>
-  <LaunchAction
+         </BuildableReference>
+      </MacroExpansion>
+      <Testables>
+      </Testables>
+   </TestAction>
+   <LaunchAction
       buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
@@ -49,39 +49,39 @@
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
       allowLocationSimulation = "YES">
-    <BuildableProductRunnable
+      <BuildableProductRunnable
          runnableDebuggingMode = "0">
-      <BuildableReference
+         <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "33CC10EC2044A3C60003C045"
-            BuildableName = "keychat.app"
+            BuildableName = "keychat-desktop.app"
             BlueprintName = "Runner"
             ReferencedContainer = "container:Runner.xcodeproj">
-      </BuildableReference>
-    </BuildableProductRunnable>
-  </LaunchAction>
-  <ProfileAction
+         </BuildableReference>
+      </BuildableProductRunnable>
+   </LaunchAction>
+   <ProfileAction
       buildConfiguration = "Profile"
       shouldUseLaunchSchemeArgsEnv = "YES"
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
       debugDocumentVersioning = "YES">
-    <BuildableProductRunnable
+      <BuildableProductRunnable
          runnableDebuggingMode = "0">
-      <BuildableReference
+         <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "33CC10EC2044A3C60003C045"
-            BuildableName = "keychat.app"
+            BuildableName = "keychat-desktop.app"
             BlueprintName = "Runner"
             ReferencedContainer = "container:Runner.xcodeproj">
-      </BuildableReference>
-    </BuildableProductRunnable>
-  </ProfileAction>
-  <AnalyzeAction
+         </BuildableReference>
+      </BuildableProductRunnable>
+   </ProfileAction>
+   <AnalyzeAction
       buildConfiguration = "Debug">
-  </AnalyzeAction>
-  <ArchiveAction
+   </AnalyzeAction>
+   <ArchiveAction
       buildConfiguration = "Release"
       revealArchiveInOrganizer = "YES">
-  </ArchiveAction>
+   </ArchiveAction>
 </Scheme>
