build for macos

--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,4 @@ packages/app/android/app/google-services.json
 packages/app/macos/Runner/GoogleService-Info.plist
 packages/app/firebase.json
 packages/app/firepit-log.txt
+*.dmg
