--- a/packages/app/pubspec.yaml
+++ b/packages/app/pubspec.yaml
@@ -4,7 +4,7 @@ description: keychat
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
-version: 1.25.4+6311
+version: 1.25.5+6312
  
 environment:
   sdk: ">=3.4.3 <4.0.0"
@@ -72,7 +72,7 @@ dependencies:
   flutter_svg: ^2.0.15
   crypto: ^3.0.6
   web_socket_channel: ^3.0.1
-  flutter_secure_storage: ^9.2.2
+  flutter_secure_storage: 10.0.0-beta.4
   avatar_plus: ^0.0.5
   freezed_annotation: ^2.4.4
   barcode_scan2: ^4.3.3
@@ -104,7 +104,9 @@ dev_dependencies:
   flutter_launcher_icons: ^0.13.1
   analyzer: ^5.13.0
   test: ^1.25.2
-  dmg: ^0.1.2
+  dmg:
+    path: ../../../dmg
+  # dmg: ^0.1.2
 
 flutter:
   # The following line ensures that the Material Icons font is
