--- a/packages/app/pubspec.yaml
+++ b/packages/app/pubspec.yaml
@@ -4,7 +4,7 @@ description: keychat
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
-version: 1.26.1+6313
+version: 1.26.1+6314
  
 environment:
   sdk: ">=3.4.3 <4.0.0"
@@ -26,7 +26,7 @@ dependencies:
   path: 1.9.0
   convert: ^3.1.2
   shared_preferences: ^2.3.3
-  badges: ^3.0.3
+  badges: ^3.1.2
   equatable: ^2.0.6
   json_annotation: ^4.9.0
   isar: 3.1.0+1
@@ -72,18 +72,18 @@ dependencies:
   flutter_svg: ^2.0.15
   crypto: ^3.0.6
   web_socket_channel: ^3.0.1
-  flutter_secure_storage: 10.0.0-beta.4
+  flutter_secure_storage: ^10.0.0-beta.4
   avatar_plus: ^0.0.5
   freezed_annotation: ^2.4.4
   barcode_scan2: ^4.3.3
   intl: ^0.19.0
-  firebase_core: ^3.8.0
-  firebase_messaging: ^15.1.5
-  firebase_crashlytics: ^4.1.5
-  firebase_analytics: ^11.3.5
+  firebase_core: ^3.10.0
+  firebase_messaging: ^15.2.0
+  firebase_crashlytics: ^4.3.0
+  firebase_analytics: ^11.4.0
   async_queue: ^2.0.2
   url_launcher: ^6.3.1
-  flutter_inappwebview: 6.2.0-beta.2
+  flutter_inappwebview: ^6.2.0-beta.2
   encrypt: ^5.0.3
   file_picker: ^8.1.6
   image: ^4.5.2
