add flutteramber lib

--- a/packages/app/android/app/src/main/AndroidManifest.xml
+++ b/packages/app/android/app/src/main/AndroidManifest.xml
@@ -59,6 +59,11 @@
       <data android:scheme="nostr" />
     </intent>
     <intent>
+      <action android:name="android.intent.action.VIEW" />
+      <category android:name="android.intent.category.BROWSABLE" />
+      <data android:scheme="nostrsigner" />
+    </intent>
+    <intent>
       <action android:name="android.support.customtabs.action.CustomTabsService" />
     </intent>
   </queries>
