--- a/packages/app/pubspec.yaml
+++ b/packages/app/pubspec.yaml
@@ -90,6 +90,9 @@ dependencies:
   pub_semver: ^2.1.5
   flutter_new_badger: ^1.1.0
   auto_size_text_plus: ^3.0.2
+  amberflutter:
+    git:
+      url: https://github.com/keychat-io/amberflutter.git
 
 dev_dependencies:
   flutter_test:
