--- a/packages/app/macos/Runner/Release.entitlements
+++ b/packages/app/macos/Runner/Release.entitlements
@@ -20,7 +20,7 @@
     <true/>
     <key>keychain-access-groups</key>
     <array>
-      <string>$(AppIdentifierPrefix)shared</string>
+      <string>$(AppIdentifierPrefix)*</string>
     </array>
   </dict>
 </plist>
