--- a/packages/app/macos/Runner/RunnerDebug.entitlements
+++ b/packages/app/macos/Runner/RunnerDebug.entitlements
@@ -22,7 +22,7 @@
     <true/>
     <key>keychain-access-groups</key>
     <array>
-      <string>$(AppIdentifierPrefix)shared</string>
+      <string>$(AppIdentifierPrefix)*</string>
     </array>
   </dict>
 </plist>
