--- a/packages/app/pubspec.yaml
+++ b/packages/app/pubspec.yaml
@@ -4,7 +4,7 @@ description: keychat
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
-version: 1.27.1+6325
+version: 1.27.2+6326
  
 environment:
   sdk: ">=3.4.3 <4.0.0"
@@ -63,7 +63,7 @@ dependencies:
   flutter_staggered_grid_view: ^0.7.0
   video_player: ^2.9.2
   video_compress: ^3.1.3
-  flutter_markdown: ^0.7.4+2
+  markdown_widget: ^2.3.2+6
   scroll_to_index: ^3.0.1
   connectivity_plus: ^6.1.0
   open_filex: ^4.6.0
