--- a/packages/app/android/app/src/main/AndroidManifest.xml
+++ b/packages/app/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
-  <application android:label="Keychat" android:name="${applicationName}" android:icon="@mipmap/launcher_icon">
+  <application android:label="Keychat" android:name="${applicationName}" android:icon="@mipmap/launcher_icon" android:enableOnBackInvokedCallback="true">
     <activity android:name=".MainActivity" android:exported="true" android:requestLegacyExternalStorage="true" android:launchMode="singleTop" android:theme="@style/LaunchTheme" android:configChanges="orientation|keyboardHidden|keyboard|screenSize|smallestScreenSize|locale|layoutDirection|fontScale|screenLayout|density|uiMode" android:hardwareAccelerated="true" android:windowSoftInputMode="adjustResize">
       <!-- Specifies an Android theme to apply to this Activity as soon as
                  the Android process has started. This theme is visible to the user
@@ -57,6 +57,11 @@
     <intent>
       <action android:name="android.intent.action.VIEW" />
       <data android:scheme="nostr" />
+    </intent>
+    <intent>
+      <action android:name="android.intent.action.VIEW" />
+      <category android:name="android.intent.category.BROWSABLE" />
+      <data android:scheme="nostrsigner" />
     </intent>
     <intent>
       <action android:name="android.support.customtabs.action.CustomTabsService" />
