--- a/packages/app/pubspec.yaml
+++ b/packages/app/pubspec.yaml
@@ -4,7 +4,7 @@ description: keychat
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
-version: 1.26.8+6322
+version: 1.27.2+6326
  
 environment:
   sdk: ">=3.4.3 <4.0.0"
@@ -63,7 +63,7 @@ dependencies:
   flutter_staggered_grid_view: ^0.7.0
   video_player: ^2.9.2
   video_compress: ^3.1.3
-  flutter_markdown: ^0.7.4+2
+  markdown_widget: ^2.3.2+6
   scroll_to_index: ^3.0.1
   connectivity_plus: ^6.1.0
   open_filex: ^4.6.0
@@ -90,6 +90,9 @@ dependencies:
   pub_semver: ^2.1.5
   flutter_new_badger: ^1.1.0
   auto_size_text_plus: ^3.0.2
+  amberflutter:
+    git:
+      url: https://github.com/keychat-io/amberflutter.git
 
 dev_dependencies:
   flutter_test:
@@ -107,7 +110,7 @@ dev_dependencies:
   test: ^1.25.2
   # dmg:
   #   path: ../../../dmg
-  # dmg: ^0.1.2
+  dmg: ^0.1.2
 
 flutter:
   # The following line ensures that the Material Icons font is
