--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,6 +5,6 @@ environment:
   sdk: ">=2.18.0 <4.0.0"
 
 dev_dependencies:
-  melos: ^6.0.0
   flutter_lints: ^4.0.0
   test: ^1.25.14
+  melos: 6.2.0
