--- a/packages/app/macos/Runner/RunnerDebug.entitlements
+++ b/packages/app/macos/Runner/RunnerDebug.entitlements
@@ -23,8 +23,6 @@
 	<key>com.apple.security.network.server</key>
 	<true/>
 	<key>keychain-access-groups</key>
-	<array>
-		<string>$(AppIdentifierPrefix)shared</string>
-	</array>
+	<array/>
 </dict>
 </plist>
