--- a/packages/app/pubspec.yaml
+++ b/packages/app/pubspec.yaml
@@ -108,9 +108,7 @@ dev_dependencies:
   flutter_launcher_icons: ^0.13.1
   analyzer: ^5.13.0
   test: ^1.25.2
-  # dmg:
-  #   path: ../../../dmg
-  dmg: ^0.1.2
+  dmg: 0.1.3-rc
 
 flutter:
   # The following line ensures that the Material Icons font is
