--- a/packages/app/pubspec.yaml
+++ b/packages/app/pubspec.yaml
@@ -7,8 +7,9 @@ publish_to: "none" # Remove this line if you wish to publish to pub.dev
 version: 1.29.2+6333
 
 environment:
-  sdk: ">=3.4.3 <4.0.0"
+  sdk: ">=3.5.0 <4.0.0"
   flutter: ">=3.3.0"
+resolution: workspace
 
 platforms:
   android:
@@ -30,6 +31,9 @@ dependencies:
   badges: ^3.1.2
   equatable: ^2.0.6
   json_annotation: ^4.9.0
+  aws: 1.0.0
+  keychat_rust_ffi_plugin: 1.0.0
+  keychat_ecash: 1.0.0
   isar:
     version: 3.1.8
     hosted: https://pub.isar-community.dev/
@@ -53,9 +57,6 @@ dependencies:
   any_link_preview: ^3.0.2 # show link preview in chat content
   flutter_dotenv: ^5.2.1
   logger: ^2.5.0
-  aws: 1.0.0
-  keychat_rust_ffi_plugin: 1.0.0
-  keychat_ecash: 1.0.0
   cached_network_image: ^3.4.1
   onboarding: ^4.0.2
   # gif: ^2.3.0 # gif support
@@ -117,6 +118,9 @@ dev_dependencies:
   lints: ^5.1.1
   flutter_lints: ^5.0.0
   dmg: ^0.1.3
+
+dependency_overrides:
+  dart_style: ^3.0.0
 
 flutter:
   # The following line ensures that the Material Icons font is
