--- a/packages/app/pubspec.yaml
+++ b/packages/app/pubspec.yaml
@@ -4,13 +4,12 @@ description: keychat
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
-version: 1.29.1+6332
-
-isar_version: &isar_version 3.1.8
+version: 1.29.2+6335
 
 environment:
-  sdk: ">=3.4.3 <4.0.0"
+  sdk: ">=3.5.0 <4.0.0"
   flutter: ">=3.3.0"
+resolution: workspace
 
 platforms:
   android:
@@ -32,11 +31,14 @@ dependencies:
   badges: ^3.1.2
   equatable: ^2.0.6
   json_annotation: ^4.9.0
+  aws: 1.0.0
+  keychat_rust_ffi_plugin: 1.0.0
+  keychat_ecash: 1.0.0
   isar:
-    version: *isar_version
+    version: 3.1.8
     hosted: https://pub.isar-community.dev/
   isar_flutter_libs: # contains Isar Core
-    version: *isar_version
+    version: 3.1.8
     hosted: https://pub.isar-community.dev/
   share_plus: ^10.1.2
   flutter_linkify: ^6.0.0
@@ -55,9 +57,6 @@ dependencies:
   any_link_preview: ^3.0.2 # show link preview in chat content
   flutter_dotenv: ^5.2.1
   logger: ^2.5.0
-  aws: 1.0.0
-  keychat_rust_ffi_plugin: 1.0.0
-  keychat_ecash: 1.0.0
   cached_network_image: ^3.4.1
   onboarding: ^4.0.2
   # gif: ^2.3.0 # gif support
@@ -73,7 +72,7 @@ dependencies:
   markdown_widget: ^2.3.2+6
   scroll_to_index: ^3.0.1
   connectivity_plus: ^6.1.0
-  open_filex: ^4.6.0
+  open_filex: ^4.7.0
   timer_builder: ^2.0.0
   linkify: ^5.0.0
   flutter_svg: ^2.0.15
@@ -83,10 +82,9 @@ dependencies:
   freezed_annotation: ^3.0.0
   barcode_scan2: ^4.5.0
   intl: ^0.19.0
-  firebase_core: ^3.10.0
-  firebase_messaging: ^15.2.0
-  firebase_crashlytics: ^4.3.0
-  firebase_analytics: ^11.4.0
+  firebase_core: ^3.12.1
+  firebase_messaging: ^15.2.4
+  firebase_crashlytics: ^4.3.4
   async_queue: ^2.0.2
   url_launcher: ^6.3.1
   flutter_inappwebview: ^6.2.0-beta.2
@@ -109,7 +107,7 @@ dev_dependencies:
     sdk: flutter
   build_runner: ^2.4.15
   isar_generator:
-    version: *isar_version
+    version: 3.1.8
     hosted: https://pub.isar-community.dev/
   json_serializable: ^6.9.0
   freezed: ^3.0.0-0.0.dev
@@ -119,6 +117,9 @@ dev_dependencies:
   lints: ^5.1.1
   flutter_lints: ^5.0.0
   dmg: ^0.1.3
+
+dependency_overrides:
+  dart_style: ^3.0.0
 
 flutter:
   # The following line ensures that the Material Icons font is
