--- a/packages/app/macos/Runner/DebugProfile.entitlements
+++ b/packages/app/macos/Runner/DebugProfile.entitlements
@@ -23,6 +23,8 @@
     <key>com.apple.security.network.server</key>
     <true/>
     <key>keychain-access-groups</key>
-    <array/>
+    <array>
+      <string>$(AppIdentifierPrefix)shared</string>
+    </array>
   </dict>
 </plist>
