--- a/packages/app/windows/runner/Runner.rc
+++ b/packages/app/windows/runner/Runner.rc
@@ -89,13 +89,13 @@ BEGIN
     BEGIN
         BLOCK "040904e4"
         BEGIN
-            VALUE "CompanyName", "com.example" "\0"
-            VALUE "FileDescription", "app" "\0"
+            VALUE "CompanyName", "com.keychat.io" "\0"
+            VALUE "FileDescription", "Keychat is a chat app, built on Bitcoin Ecash , Nostr Protocol and Signal / MLS Protocol" "\0"
             VALUE "FileVersion", VERSION_AS_STRING "\0"
             VALUE "InternalName", "app" "\0"
-            VALUE "LegalCopyright", "Copyright (C) 2023 com.example. All rights reserved." "\0"
-            VALUE "OriginalFilename", "app.exe" "\0"
-            VALUE "ProductName", "app" "\0"
+            VALUE "LegalCopyright", "Copyright © KEYME PTE. LTD. 2025. All rights reserved." "\0"
+            VALUE "OriginalFilename", "Keychat.exe" "\0"
+            VALUE "ProductName", "Keychat" "\0"
             VALUE "ProductVersion", VERSION_AS_STRING "\0"
         END
     END
