--- a/packages/app/windows/packaging/exe/make_config.yaml
+++ b/packages/app/windows/packaging/exe/make_config.yaml
@@ -4,7 +4,7 @@ publisher_url: https://github.com/keychat-io/keychat-app
 display_name: Keychat
 create_desktop_icon: true
 # See: https://jrsoftware.org/ishelp/index.php?topic=setup_defaultdirname
-# install_dir_name: "D:\\HELLO-WORLD"
+install_dir_name: "C:\\Program Files\\Keychat"
 setup_icon_file: windows\runner\resources\app_icon.ico
 locales:
   - en
