--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -162,7 +162,7 @@ melos:
       steps:
         - cd packages/app
         - fastforge package --platform windows --targets exe --flutter-build-args=verbose
-        - explorer ".\packages\app\build\dist\"
+        - explorer ".\build\dist\"
     rust:ios:
       name: rust_api_2_dart
       run: bash scripts/rust_generate_ios.sh
