--- a/packages/app/pubspec.yaml
+++ b/packages/app/pubspec.yaml
@@ -62,7 +62,7 @@ dependencies:
   # gif: ^2.3.0 # gif support
   queue: ^3.1.0+2
   mutex: ^3.0.1
-  pull_to_refresh: ^2.0.0
+  pull_to_refresh_flutter3: ^2.0.2
   dropdown_button2: ^2.3.9
   easy_debounce: ^2.0.3
   carousel_slider: ^5.0.0
