--- a/packages/app/linux/packaging/rpm/make_config.yaml
+++ b/packages/app/linux/packaging/rpm/make_config.yaml
@@ -1,5 +1,5 @@
 icon: linux/assets/logo.png
-summary: Keychat is a chat app, built on Bitcoin Ecash, Nostr Protocol and Signal/MLS Protocol.
+summary: Keychat is the super app for Bitcoiners.Autonomous IDs, Bitcoin ecash wallet, secure chat, and rich mini apps — all in Keychat. Autonomy. Security. Richness.
 group: Application/Chat
 vendor: Keychat
 packager: Keychat
